samples/_failures_safe/1761514692_133b79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e9505a1.c: In function ‘main’:
./samples/SAFE/__tmp_7e9505a1.c:157:20: error: missing terminating " character
  157 |             printf("Invalid edge format. Please enter: source destination
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7e9505a1.c:157:13: error: expected expression at end of input
  157 |             printf("Invalid edge format. Please enter: source destination
      |             ^~~~~~
./samples/SAFE/__tmp_7e9505a1.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e9505a1.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e9505a1.c:157:13: error: expected declaration or statement at end of input
